# Editing-Software

./: .gitignore  README.md
apps/desktop/: README.md
config/: upstreams.json
docs/: ARCHITECTURE.md  BUILD_PLAN.md  PHASE1_STATUS.md  PHASE2_STATUS.md
scripts/: bootstrap_upstreams.sh  build_openshot_baseline.sh  install_phase1_deps.sh  run_openshot_baseline.sh
upstream/: README.md
upstream/datamosher-pro/: Readme.md
upstream/datamosher-pro/Python Version/: Datamosher Pro.py  Setup.py  requirements.txt
upstream/gl-transitions/: .gitignore  README.md
upstream/gl-transitions/.github/workflows/: ci.yml  preview.yml  test-preview.yml
upstream/gl-transitions/scripts/: gl-transition-transform.js
upstream/gl-transitions/scripts/preview/: package.json  render-transition.js  validate-transition.js
upstream/gl-transitions/scripts/release-skeleton/: README.md
upstream/gl-transitions/transitions/: BowTieWithParameter.glsl  EdgeTransition.glsl  FilmBurn.glsl  GlitchMemories.glsl  InvertedPageCurl.glsl  LeftRight.glsl  LinearBlur.glsl  Overexposure.glsl  PolkaDotsCurtain.glsl  StarWipe.glsl  StereoViewer.glsl  TVStatic.glsl  TopBottom.glsl  WaterDrop.glsl  angular.glsl  burn.glsl  burn0.glsl  chessboard.glsl  circle.glsl  circleopen.glsl  dissolve.glsl  doorway.glsl  fade.glsl  fadecolor.glsl  fragment.glsl  hexagonalize.glsl  kaleidoscope.glsl  pinwheel.glsl  polar_function.glsl  powerKaleido.glsl  randomNoisex.glsl  ripple.glsl  rotate_scale_fade.glsl  scale-in.glsl  static_wipe.glsl  tangentMotionBlur.glsl  wind.glsl  x_axis_translation.glsl  zoomInOut.glsl
upstream/libopenshot/: .gitignore  .gitlab-ci.yml  CMakeLists.txt
upstream/libopenshot-audio/: .gitlab-ci.yml  CMakeLists.txt  OpenShotLibrary.jucer
upstream/libopenshot-audio/.github/workflows/: ci.yml  generate-docs.yml
upstream/libopenshot-audio/JuceLibraryCode/: AppConfig.h  JuceHeader.h
upstream/libopenshot-audio/include/: AppConfig.h.in
upstream/libopenshot-audio/src/: Main.cpp
upstream/libopenshot/.github/workflows/: ci.yml
upstream/libopenshot/.reuse/: dep5
upstream/libopenshot/bindings/: CMakeLists.txt
upstream/libopenshot/bindings/godot/: CMakeLists.txt  libopenshot_godot.gdextension  osg_timeline.cpp  osg_timeline.h  register_types.cpp  register_types.h
upstream/libopenshot/bindings/java/: CMakeLists.txt  openshot.i
upstream/libopenshot/bindings/python/: CMakeLists.txt  openshot.i
upstream/libopenshot/bindings/ruby/: openshot.i
upstream/libopenshot/doc/: HW-ACCEL.md
upstream/libopenshot/examples/: CMakeLists.txt  Example.cpp  Example_opencv.cpp  VulkanBenchmark.cpp  domain-1d-lut.cube  domain-3d-lut.cube  example-1d-lut.cube  example-lut.cube
upstream/libopenshot/examples/vulkan/: direct_preview.comp
upstream/libopenshot/src/: AudioReaderSource.cpp  AudioWaveformer.cpp  AudioWaveformer.h  CMakeLists.txt  CVTracker.cpp  CVTracker.h  CacheBase.cpp  CacheBase.h  CacheDisk.cpp  CacheDisk.h  CacheMemory.cpp  CacheMemory.h  ChunkReader.cpp  ChunkWriter.cpp  Clip.cpp  Clip.h  ClipBase.h  EffectBase.cpp  EffectBase.h  EffectInfo.cpp  Effects.h  Enums.h  Exceptions.h  FFmpegReader.cpp  FFmpegReader.h  FFmpegUtilities.h  FFmpegWriter.cpp  FFmpegWriter.h  Frame.cpp  Frame.h  FrameMapper.cpp  FrameMapper.h  IdGenerator.h  ImageReader.cpp  KeyFrame.cpp  MemoryTrim.cpp  MemoryTrim.h  OpenMPUtilities.h  OpenShotVersion.h.in  Profiles.cpp  (+12 more)
upstream/libopenshot/src/Qt/: AudioPlaybackThread.cpp  AudioPlaybackThread.h  PlayerPrivate.cpp  VideoCacheThread.cpp  VideoCacheThread.h
upstream/libopenshot/src/effects/: AnalogTape.cpp  AnalogTape.h  Blur.cpp  Blur.h  Brightness.cpp  Brightness.h  Caption.cpp  ChromaKey.cpp  ChromaKey.h  ColorMap.cpp  ColorMap.h  CropHelpers.cpp  CropHelpers.h  Deinterlace.cpp  Hue.cpp  Hue.h  LensFlare.cpp  LensFlare.h  Mask.cpp  Mask.h  ObjectDetection.cpp  ObjectDetection.h  Outline.cpp  Outline.h  Pixelate.cpp  Pixelate.h  Saturation.cpp  Saturation.h  Sharpen.cpp  Sharpen.h  SphericalProjection.cpp  SphericalProjection.h  Tracker.cpp  Tracker.h  Wave.cpp
upstream/libopenshot/src/sort_filter/: KalmanTracker.cpp  sort.cpp  sort.hpp
upstream/libopenshot/tests/: AnalogTape.cpp  AudioWaveformer.cpp  Benchmark.cpp  BenchmarkArgs.cpp  BenchmarkOptions.cpp  BenchmarkOptions.h  CMakeLists.txt  CVOutline.cpp  CVTracker.cpp  Caption.cpp  ChromaKey.cpp  Clip.cpp  ColorMap.cpp  Crop.cpp  DummyReader.cpp  EffectMask.cpp  FFmpegReader.cpp  FFmpegWriter.cpp  Frame.cpp  FrameMapper.cpp  ImageReader.cpp  LensFlare.cpp  Mask.cpp  Profiles.cpp  QtImageReader.cpp  ReaderBase.cpp  Settings.cpp  Sharpen.cpp  SphericalEffect.cpp  SphericalMetadata.cpp  Timeline.cpp  VideoCacheThread.cpp  WaveEffect.cpp
upstream/openshot-qt/: .gitignore  .gitlab-ci.yml  README.md  freeze.py
upstream/openshot-qt/.github/workflows/: ci.yml  sphinx.yml  translations.yml
upstream/openshot-qt/doc/: Makefile  README.md  ai.rst  animation.rst  clips.rst  conf.py  developers.rst  effects.rst  export.rst  files.rst  glossary.rst  import_export.rst  index.rst  installation.rst  introduction.rst  main_window.rst  playback.rst  preferences.rst  profiles.rst  timeline.rst  titles.rst  troubleshoot.rst
upstream/openshot-qt/doc/_templates/: layout.html
upstream/openshot-qt/doc/css/: lightbox.css  lightbox.js
upstream/openshot-qt/doc/locale/: ai.pot  animation.pot  clips.pot  contributing.pot  developers.pot  effects.pot  export.pot  files.pot  getting_started.pot  glossary.pot  import_export.pot  index.pot  installation.pot  introduction.pot  learn_more.pot  main_window.pot  playback.pot  preferences.pot  profiles.pot  quick_tutorial.pot  sphinx.pot  timeline.pot  titles.pot  transitions.pot  troubleshoot.pot
upstream/openshot-qt/images/: openshot.qrc
upstream/openshot-qt/installer/: build-mac-dmg.sh  build_server.py  launch-linux.sh
upstream/openshot-qt/src/: launch.py  qt_test_app.py
upstream/openshot-qt/src/blender/: blinds.xml  colors.xml  earth.xml  explode.xml  fly_by_1.xml  fly_by_two_titles.xml  glare.xml  glass_slider.xml  (+5 more)
upstream/openshot-qt/xdg/: org.openshot.OpenShot.appdata.xml
(+1219 files in other folders)
